[package]
name = "ndarray-npy"
version = "0.5.2"
authors = ["Jim Turner <ndarray-npy@turner.link>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jturner314/ndarray-npy"
description = ".npy and .npz file format support for ndarray"
keywords = ["npy", "npz", "ndarray", "numpy", "array"]
categories = ["parser-implementations", "encoding", "science"]
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.3"
ndarray = "0.13"
num-traits = "0.2"
py_literal = "0.2"
thiserror = "1.0"
zip = { version = "0.5", default-features = false, optional = true }

[features]
default = ["compressed_npz"]
npz = ["zip"]
compressed_npz = ["npz", "zip/deflate"]

[dev-dependencies]
criterion = { version = "0.3", features=['real_blackbox'] }

[[bench]]
name = "write_arr"
harness = false

[[bench]]
name = "memcpy"
harness = false
